# SpecProbe

./: .editorconfig  .gitignore  CHANGES  CHANGES.TITLE  Directory.Build.props  Makefile  README.md  SpecProbe.sln  SpecProbe.slnx  index.html  index.json  manifest.json  sitemap.xml  toc.html  toc.json  xrefmap.yml
.github/: issue_template.md
DocGen/: docfx.json  index.md  toc.yml
SpecProbe/: HardwareProber.cs  SpecProbe.csproj
SpecProbe.ConsoleTest/: Program.cs  SpecProbe.ConsoleTest.csproj  app.manifest
SpecProbe.Loader/: EnvironmentTools.cs  LibraryFile.cs  LibraryItem.cs  LibraryManager.cs  SpecProbe.Loader.csproj
SpecProbe.Native/: Initializer.cs  SpecProbe.Native.csproj
SpecProbe.Software/: SpecProbe.Software.csproj
SpecProbe.Tests/: SpecProbe.Tests.csproj
api/: SpecProbe.Hardware.HardwareProber.html  SpecProbe.Hardware.Parts.BaseHardwarePartInfo.html  SpecProbe.Hardware.Parts.HardwarePartType.html  SpecProbe.Hardware.Parts.IHardwarePartInfo.html  SpecProbe.Hardware.Parts.Types.HardDiskPart.PartitionPart.html  SpecProbe.Hardware.Parts.Types.HardDiskPart.html  SpecProbe.Hardware.Parts.Types.MemoryPart.html  SpecProbe.Hardware.Parts.Types.ProcessorPart.html  SpecProbe.Hardware.Parts.Types.VideoPart.html  SpecProbe.Hardware.Parts.Types.html  (+65 more)
interop/libspecprober/: CMakeLists.txt
interop/libspecprober/include/: specprober.h
interop/libspecprober/src/: specprober.c
interop/libspecprober_ldelf_fbsd/: CMakeLists.txt
interop/libspecprober_ldelf_fbsd/include/: sp_le_wrapper.h
interop/libspecprober_ldelf_fbsd/src/: sp_le_wrapper.c
tools/: build.sh  (+8 more)
(+477 files in other folders)
